# x1factory

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  MAINNET_DATA.md  MAINNET_RUNBOOK.md  README.md  RUNBOOK.md  TEST_LOG.md  next.config.js  package-lock.json  package.json  tsconfig.bot.json  tsconfig.json  tsconfig.scripts.json  vercel.json
.github/workflows/: e2e-testnet.yml
deployments/: x1-testnet.json
docs/: checklista-startu-season-1.md  factory-clicker-economy.md  factory-clicker-flow.md  factory-clicker-idea.md  factory-clicker-mini-app-plan.md  factory-clicker-project.md  factory-clicker-spec.md  instrukcja-gry.md  regulamin.md  zasady-gry.md
metadata/: mind-v2.json
pages/: index.js
prisma/: schema.prisma
programs/melt_v1/: Cargo.toml  README.md
programs/melt_v1/src/: lib.rs
programs/mining_v2/: Cargo.toml
programs/mining_v2/src/: lib.rs
programs/pocm_vault_mining/: Cargo.toml
programs/pocm_vault_mining/src/: lib.rs
public/: app.js  reactor.css
public/telegrambot/: index.html
scripts/: admin-fix-accumulator.ts  build-vercel-output.js  claim-mind-bot.ts  claim.ts  common.ts  deposit.ts  heartbeat.ts  init.ts  mainnet-v2-recalc-network-hp.ts  mainnet-v2-set-metadata.ts  melt-v1-autofinalize-testnet.ts  melt-v1-flow-2users-testnet.ts  melt-v1-flow-admin-only.ts  melt-v1-flow-testnet.ts  melt-v1-init-mainnet.ts  melt-v1-migrate-mainnet.ts  melt-v1-migrate-testnet.ts  melt-v1-scenarios-testnet.ts  migrate-clicker-wallets.ts  mining-v2-melt-migrate-mainnet.ts  mining-v2-melt-migrate-testnet.ts  set-metadata.ts  testnet-deploy.sh  testnet-v2-init-rig-buff.ts  testnet-v2-init.ts  testnet-v2-recalc-network-hp.ts  tmp-pending-mind.ts  update-staking-vault.ts  update-xp.ts  v2-common.ts  withdraw-staking-rewards.ts  withdraw.ts
scripts/cargo-wrapper/: cargo
scripts/rustup-wrapper/: rustup
scripts/sbf-target/: sbf-solana-solana.json
scripts/tmp/: below_burn_min.json  claim_before_finalize.json  claim_twice.json  melt_userA.json  melt_userB.json  multi_burn.json  zero_burn_user.json
src/: index.ts
src/admin/: index.ts
src/bot/: createBot.ts  formatters.ts  notifier.ts  registrationState.ts  types.ts  ui.ts
src/commands/: adminAuth.ts  adminBroadcast.ts  adminClicker.ts  adminSeason.ts  adminSetWallet.ts  alltime.ts  clicker.ts  help.ts  index.ts  leaderboard.ts  menu.ts  profile.ts  register.ts  registerWalletText.ts  season.ts  start.ts
src/config/: env.ts  logger.ts  points.ts
src/db/: badgeRepository.ts  databaseService.ts  eventRepository.ts  index.ts  pointsRepository.ts  scannerRepository.ts  seasonRepository.ts  userRepository.ts  walletRepository.ts
src/scanner/: adapter.ts  anchorCodec.ts  diff.ts  index.ts  mockAdapter.ts  realAdapter.ts  rpcAdapter.ts  service.ts  types.ts  x1FactoryScanner.ts
src/services/: adminService.ts  clickerService.ts  clickerSettlementService.ts  eventLabels.ts  hashRushService.ts  leaderboardService.ts  mockData.ts  mockPointsService.ts  pointsService.ts  profileService.ts  seasonService.ts  walletValidation.ts
src/web/: server.ts  webAppAuth.ts
tests/: mining_v2.ts  pocm_vault_mining.ts
web/: README.md  TESTING.md  buffer-layout.d.ts  index.html  next.config.js  next.config.mjs  package-lock.json  package.json  styles.css  vercel.json
web/app/: globals.css  layout.tsx  providers.tsx
web/app/melt/: page.tsx
web/components/: AdminPanel.tsx  PublicPanel.tsx
web/data/: lvl-payouts.json
web/idl/: mining_v2.json  pocm_vault_mining.json  x1mind.json
web/lib/: adminData.ts  anchor.ts  decoders.ts  format.ts  formatError.ts  leveling.ts  melt.ts  ripperPool.ts  solana.ts  useMeltState.ts  useMeltSummary.ts  useYieldSummary.ts  x1mind.ts  x1mindAdmin.ts  x1mindAnchor.ts  yieldMath.ts  yieldPoolStore.ts
web/public/: reactor.js
web/tests/: yieldMath.test.ts
web/tokenlist/: x1factory-token.json
web/types/: bs58.d.ts
(+45 files in other folders)
