[workspace]
members = [
    "programs/pocm_vault_mining",
    "programs/mining_v2",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = "debuginfo"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
toml_edit = { path = "vendor/toml_edit-0.22.13" }
proc-macro-crate = { path = "vendor/proc-macro-crate-3.4.0" }
indexmap = { path = "vendor/indexmap-2.0.0" }
toml = { path = "vendor/toml-0.8.12" }
proc-macro-error = { path = "vendor/proc-macro-error-1.0.4" }
